# mkpkg

./: .gitignore  ABUILD  CHANGELOG  CMakeLists.txt  README.md  mkpkg  mkpkg.conf  mkpkg.messages  mkpkg.n_messages  mkpkg_32to64  mkpkg_build_functions  mkpkg_make64  mkpkg_nonlatin.py  mkpkg_shared_functions  mkpkg_xml_parser.py  readme  taglist
doc/: 0.0_about_mkpkg.mediawiki  0.1_first_usage.mediawiki  0.2_command_line_options.mediawiki  1.0_syntax_basics.mediawiki
mkpkg_templates/: autotools  c  cmake  footer  perl  python  qmake  scons  waf
tests/: run_tests.sh
tests/build-stop-on-error/: ABUILD
