# mkpkg CMakeLists file
# 
# Current bugs:
# -DCMAKE_INSTALL_PREFIX=/usr is required, because there are still hardcoded paths in scripts.
# Otherwise, you can edit mkpkg script manually

cmake_minimum_required(VERSION 2.8)
if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
	cmake_policy(SET CMP0005 NEW)
endif(COMMAND cmake_policy)

PROJECT(mkpkg)



INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg" DESTINATION bin PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_32to64" DESTINATION bin PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_make64" DESTINATION bin PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg.messages" DESTINATION share/mpkg/mkpkg)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg.n_messages" DESTINATION share/mpkg/mkpkg)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_nonlatin.py" DESTINATION share/mpkg/mkpkg)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_xml_parser.py" DESTINATION bin RENAME mkpkg_xml_parser PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/taglist" DESTINATION share/mpkg/mkpkg)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/ABUILD" DESTINATION share/mpkg/mkpkg)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_build_functions" DESTINATION share/mpkg/mkpkg)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_shared_functions" DESTINATION share/mpkg/mkpkg)

FILE(GLOB templates "${CMAKE_CURRENT_SOURCE_DIR}/mkpkg_templates/*")
INSTALL(FILES ${templates} DESTINATION share/mpkg/mkpkg/mkpkg_templates)
